--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,11 +4,12 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-        {
-            "type": "chrome",
+        
+        {   "name": "Open index.html",
+            "type": "firefox",
             "request": "launch",
-            "name": "Open index.html",
-            "file": "c:\\Users\\Patri\\Coding docs\\Learning HTML\\Patrick Fry's portfolio\\index.html"
+            "file": "c:\\Users\\Patri\\Coding docs\\Personal-Website\\index.html",
+            "firefoxExecutable": "C:\\Program Files\\WindowsApps\\Mozilla.Firefox_146.0.1.0_x64__n80bbvh6b1yt2\\VFS\\ProgramFiles\\Firefox Package Root\\firefox.exe"
         }
     ]
 }
